@@ -1,6 +1,6 @@
 {
-  "timestamp" : "2022-04-03T00:36:12Z",
-  "count" : 28,
+  "timestamp" : "2022-04-16T08:09:26Z",
+  "count" : 12,
   "count_minmax" : [ 0, 28 ],
   "count_prev_day_inc" : 27,
   "count_prev_day_dec" : 0,
