@@ -1,0 +1,11 @@
+{
+  "timestamp" : "2022-04-16T08:09:26Z",
+  "count" : 13,
+  "count_minmax" : [ 13, 13 ],
+  "count_prev_day_inc" : 13,
+  "count_prev_day_dec" : 16,
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 1 ],
+  "uniques_prev_day_inc" : 1,
+  "uniques_prev_day_dec" : 0
+}
