@@ -1,20 +1,13 @@
 {
-  "timestamp" : "2022-04-15T16:09:33Z",
-  "count_outdated" : 841,
-  "uniques_outdated" : 45,
-  "count" : 986,
-  "uniques" : 60,
+  "timestamp" : "2022-04-16T08:09:26Z",
+  "count_outdated" : 870,
+  "uniques_outdated" : 47,
+  "count" : 1001,
+  "uniques" : 61,
   "views" : [
     {
-      "timestamp": "2022-04-01T00:00:00Z",
-      "count": 11,
-      "count_minmax": [ 11, 29 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ]
-    },
-    {
       "timestamp": "2022-04-02T00:00:00Z",
-      "count": 28,
+      "count": 12,
       "count_minmax": [ 0, 28 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
@@ -102,6 +95,13 @@
       "count_minmax": [ 0, 11 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2022-04-16T00:00:00Z",
+      "count": 13,
+      "count_minmax": [ 13, 13 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
