@@ -1,15 +1,10 @@
 {
-  "count": 145,
-  "uniques": 2,
+  "count": 131,
+  "uniques": 1,
   "views": [
     {
-      "timestamp": "2022-04-01T00:00:00Z",
-      "count": 11,
-      "uniques": 2
-    },
-    {
       "timestamp": "2022-04-02T00:00:00Z",
-      "count": 28,
+      "count": 12,
       "uniques": 1
     },
     {
@@ -70,6 +65,11 @@
     {
       "timestamp": "2022-04-15T00:00:00Z",
       "count": 11,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-04-16T00:00:00Z",
+      "count": 13,
       "uniques": 1
     }
   ]
